[gd_scene load_steps=5 format=2]

[ext_resource path="res://NPC/picture/without_outline/DEATH.png" type="Texture" id=1]
[ext_resource path="res://Controllers/interaction_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC/script/research_defender.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[node name="research_defender" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -14 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 697, 30, 50, 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="interaction_button" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -17, -45 )
scale = Vector2( 0.109375, 0.0782981 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
